fixed news item date and alignment

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1235,7 +1235,7 @@ h1 {
 	width: 60px;
 	height: 60px;
 	top: 0;
-	right: 0;
+	left: 0;
 	color: #ffffff;
 	background-color: #203e38;
 	padding: 10px;
